# raspicam

./: CMakeLists.txt
dependencies/vcos/pthreads/: vcos_platform.h
src/: CMakeLists.txt  raspicam-config.cmake.in
src/private/: private_impl.cpp
